Fix overflow of long words in <p> tags

--- a/themes/labbook/style.css
+++ b/themes/labbook/style.css
@@ -1262,6 +1262,7 @@ a:hover, a:active {
     margin-bottom: 1em;
     padding-top: 1em;
     padding-bottom: 1em;
+    word-wrap: break-word;
 }
 
 .entry-content h1,
